Fix gamepad disconnect detection on Linux

When Chrome receives a signal that an input device is connected or
disconnected, it walks up the device tree to find the parent node
that corresponds to the underlying USB or Bluetooth device. If the
device has been disconnected, sometimes the parent node has already
been removed and nullptr is returned instead. Previously, this would
cause the disconnect to not be processed.

This CL checks whether the parent node is present and processes a
disconnection for the device if the parent node is nullptr.

BUG=866047

Change-Id: I1c15323d250786d924bbd6895301ce34e8867b27
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1516617
Reviewed-by: Ovidio de Jesús Ruiz-Henríquez <odejesush@chromium.org>
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Cr-Commit-Position: refs/heads/master@{#640075}
Former-commit-id: 4b59f05f564df958902af6fb53a3f1d14f7c75fa