device/gamepad/udev_gamepad_linux.h
@@ -3,11 +3,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef DEVICE_GAMEPAD_UDEV_GAMEPAD_
-#define DEVICE_GAMEPAD_UDEV_GAMEPAD_
+#ifndef DEVICE_GAMEPAD_UDEV_GAMEPAD_LINUX_H_
+#define DEVICE_GAMEPAD_UDEV_GAMEPAD_LINUX_H_
 
 #include <memory>
 #include <string>
+
+#include "base/strings/string_piece.h"
 
 extern "C" {
 struct udev_device;
@@ -26,6 +28,10 @@ class UdevGamepadLinux {
   static const char kInputSubsystem[];
   static const char kHidrawSubsystem[];
 
+  UdevGamepadLinux(Type type,
+                   int index,
+                   base::StringPiece path,
+                   base::StringPiece syspath_prefix);
   ~UdevGamepadLinux() = default;
 
   // Factory method for creating UdevGamepadLinux instances. Extracts info
@@ -33,18 +39,25 @@ class UdevGamepadLinux {
   // if the device cannot be a gamepad.
   static std::unique_ptr<UdevGamepadLinux> Create(udev_device* dev);
 
+  // The kernel interface used to communicate with this device.
   const Type type;
-  const int index;
-  const std::string path;
-  const std::string syspath_prefix;
 
- private:
-  UdevGamepadLinux(Type type,
-                   int index,
-                   const std::string& path,
-                   const std::string& syspath_prefix);
+  // The index of this device node among nodes of this type. For instance, a
+  // device with |path| /dev/input/js3 has |index| 3.
+  const int index;
+
+  // The filesystem path of the device node representing this device.
+  const std::string path;
+
+  // A string identifier used to identify device nodes that refer to the same
+  // physical device. For nodes in the input subsystem (joydev and evdev), the
+  // |syspath_prefix| is a prefix of the syspath of the parent node. For hidraw
+  // nodes, it is a prefix of the node's syspath. |syspath_prefix| is empty if
+  // the syspath could not be queried (usually this indicates the device has
+  // been disconnected).
+  const std::string syspath_prefix;
 };
 
 }  // namespace device
 
-#endif  // DEVICE_GAMEPAD_UDEV_GAMEPAD_
+#endif  // DEVICE_GAMEPAD_UDEV_GAMEPAD_LINUX_H_
